tests/machine/x/c/right_join.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/right_join.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/right_join.c:77:7: warning: implicit declaration of function ‘result_item_list_t_create’ [-Wimplicit-function-declaration]
   77 |       result_item_list_t_create(orders.len * customers.len);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/right_join.c:77:7: error: invalid initializer

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:53Z
