tests/machine/x/c/right_join.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:53Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int id;
  char *name;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int id;
  int customerId;
  int total;
} order_t;
typedef struct {
  int len;
  order_t *data;
} order_list_t;
order_list_t create_order_list(int len) {
  order_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(order_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  char *customerName;
  order_t order;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int main() {
  customer_t tmp1_data[] = {(customer_t){.id = 1, .name = "Alice"},
                            (customer_t){.id = 2, .name = "Bob"},
                            (customer_t){.id = 3, .name = "Charlie"},
                            (customer_t){.id = 4, .name = "Diana"}};
  customer_list_t tmp1 = {4, tmp1_data};
  customer_list_t customers = tmp1;
  order_t tmp2_data[] = {(order_t){.id = 100, .customerId = 1, .total = 250},
                         (order_t){.id = 101, .customerId = 2, .total = 125},
                         (order_t){.id = 102, .customerId = 1, .total = 300}};
  order_list_t tmp2 = {3, tmp2_data};
  order_list_t orders = tmp2;
  result_item_list_t tmp3 =
      result_item_list_t_create(orders.len * customers.len);
  int tmp4 = 0;
  for (int tmp5 = 0; tmp5 < orders.len; tmp5++) {
    order_t o = orders.data[tmp5];
    int tmp6 = 0;
    for (int tmp7 = 0; tmp7 < customers.len; tmp7++) {
      customer_t c = customers.data[tmp7];
      if (!(o.customerId == c.id)) {
        continue;
      }
      tmp6 = 1;
      tmp3.data[tmp4] = (result_item_t){.customerName = c.name, .order = o};
      tmp4++;
    }
    if (!tmp6) {
      customer_t c = (customer_t){0};
      tmp3.data[tmp4] = (result_item_t){.customerName = c.name, .order = o};
      tmp4++;
    }
  }
  tmp3.len = tmp4;
  result_item_list_t result = tmp3;
  printf("--- Right Join using syntax ---\n");
  for (int tmp8 = 0; tmp8 < result.len; tmp8++) {
    result_item_t entry = result.data[tmp8];
    if (memcmp(&entry.order, &(order_t){0}, sizeof(order_t)) != 0) {
      printf("Customer %s has order %d - $ %d\n", entry.customerName,
             entry.order.id, entry.order.total);
    } else {
      printf("Customer %s has no orders\n", entry.customerName);
    }
  }
  return 0;
}
